syntax = "proto3";

option go_package = "genproto/chat_service";
import "google/protobuf/empty.proto";

// The service definition.
service ChatService {
    rpc CreateChat (CreateChatRequest) returns (CreateChatResponse) {}
    rpc GetChatByChatId (GetChatByChatIdRequest) returns (GetChatByChatIdResponse) {}
    rpc GetChatList (GetChatListRequest) returns (GetChatListResponse) {}
    rpc CreateMessage(CreateMessageRequest) returns (google.protobuf.Empty) {}
}

// Chat ...
message Chat { 
    string chat_id = 1;
    string sender_name = 2;
    string message = 3;
    string types = 4;
    string environment_id = 5;
    string created_at = 6;
}

message CreateChatRequest{
    string user_id = 1;
    Chat chat = 2;
}

message CreateChatResponse{
    string chat_id = 1;
}

message UserMessage {
    string sender_name = 1;
    string message = 2;
    string created_at = 3;
    string user_id = 4;
    string type = 5;
}

message GetChatByChatIdRequest {
    string chat_id = 1;
}

message GetChatByChatIdResponse {
    string chat_id = 1;
    repeated UserMessage messages = 2;
}

message GetChatListRequest {
    string environment_id = 1;
}

message ChatWithLastMessageData {
    string chat_id = 1;
    string sender_name = 2;
    UserMessage message = 3;
    string environment_id = 4;
    string created_at = 5;
}

message GetChatListResponse {
    string environment_id = 1;
    repeated ChatWithLastMessageData chats = 2;
}

message CreateMessageRequest {
    string chat_id = 1;
    UserMessage message = 2;
}